Bug 329212 - display the title element contents as a tooltip in SVG. r=dao,sr=bzbarsky